# HueController

./: CMakeLists.txt  Main.qml  README.md  hueapi.cpp  hueapi.h  main.cpp
